# btab_mechanisms

./: .gitattributes  .gitignore  Makefile  README.md  btab_mechanisms.opam  dune-project
lib/: btab.ml  dune  pick.ml  top_hit.ml  utils.ml
test/: dune
test/pick.t/: ids.txt  in_btab.tsv  in_btab_len.tsv  run.t
test/top_hit.t/: in_btab.tsv  in_btab_len.tsv  run.t
test_dev/: dune
test_dev/pick.t/: run.t
test_dev/top_hit_cli.t/: run.t
